--- a/index.html
+++ b/index.html
@@ -12,22 +12,20 @@
 <header>
     <h1>ostraking</h1>
 
-    <!--メイン画像-->
+
 
 </header>
 <main>
 
     <nav>
         <p>Table of Contents</p>
-        <!--記事内リンク-->
+        <!--記事リンク-->
         <ul>
             <li><a href="">まだなにもない</a></li>
         </ul>
         </nav>
 
 </main>
-
-
 
 
 
